--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,19 @@
 Package: orloca.es
 Type: Package
-Depends: methods, orloca
-Suggests: grDevices, graphics, snow
+Depends: orloca (>= 3.0)
 Title: Spanish version of orloca package
-Version: 2.0
-Date: 2008-11-25
-Author: Fernando Fernandez-Palacin <fernando.fernandez@uca.es> and Manuel Munoz-Marquez <manuel.munoz@uca.es>
+Version: 3.0
+Date: 2010-04-05
+Author: Fernando Fernandez-Palacin <fernando.fernandez@uca.es> and
+        Manuel Munoz-Marquez <manuel.munoz@uca.es>
 Maintainer: Manuel Munoz-Marquez <manuel.munoz@uca.es>
-Description: Version espanola del paquete orloca que trata de los modelos de Localizacion en Investigacion Operativa (Operations Research LOCational Analysis). En particular, el problema de encontrar el punto que minimiza la suma ponderada de las distancias a un conjunto de puntos dados.
+Description: Version espanola del paquete orloca que trata de los
+        modelos de Localizacion en Investigacion Operativa (Operations
+        Research LOCational Analysis). En particular, el problema de
+        encontrar el punto que minimiza la suma ponderada de las
+        distancias a un conjunto de puntos dados.
 License: GPL (>= 2)
 URL: http://knuth.uca.es/orloca
-Packaged: Thu Nov 20 11:55:11 2008; mmarquez
+Packaged: 2010-04-05 15:45:37 UTC; mmarquez
+Repository: CRAN
+Date/Publication: 2010-04-05 16:12:23
