--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,19 +1,20 @@
 Package: orloca.es
 Type: Package
-Depends: orloca (>= 3.2)
+Depends: orloca (>= 4.0)
+Language: es
 Title: Spanish version of orloca package
-Version: 3.2
-Date: 2010-05-22
+Version: 4.0
+Date: 2012-09-06
 Author: Fernando Fernandez-Palacin <fernando.fernandez@uca.es> and
         Manuel Munoz-Marquez <manuel.munoz@uca.es>
 Maintainer: Manuel Munoz-Marquez <manuel.munoz@uca.es>
-Description: Version espanola del paquete orloca que trata de los
-        modelos de Localizacion en Investigacion Operativa (Operations
-        Research LOCational Analysis). En particular, el problema de
-        encontrar el punto que minimiza la suma ponderada de las
-        distancias a un conjunto de puntos dados.
+Description: Version espanola del paquete orloca que trata el problema
+        de localizacion min-sum, tambien conocido como problema de
+        Fermat--Weber. El problema de localizacion min-sum busca un
+        punto tal que la suma ponderada de las distancias a los puntos
+        de demanda sea minima.
 License: GPL (>= 2)
 URL: http://knuth.uca.es/orloca
-Packaged: 2010-05-22 07:58:06 UTC; mmarquez
+Packaged: 2012-09-06 14:25:13 UTC; mmarquez
 Repository: CRAN
-Date/Publication: 2010-05-26 16:54:51
+Date/Publication: 2012-09-06 15:19:40
